fix: spacing + fonts

--- a/styles/ThreeDisplay.module.css
+++ b/styles/ThreeDisplay.module.css
@@ -5,7 +5,7 @@
 
     height: 30vh;
     width: 100vw;
-    margin-top: 100vh;
+    /* margin-top: 100vh; */
 
 }
 
