--- a/styles/programs.module.css
+++ b/styles/programs.module.css
@@ -2,7 +2,8 @@
     position: absolute;
     background-color: #195b92d1;
     text-align: left;
-    margin-top: 70vh;
+    margin-top: -30vh;
+    z-index: 998;
     /* height: 30vh; */
     width: 100vw;
     padding-left: 4vw;
